[metadata]
name = papercheck

author = Emanuel Regnath
author_email = emanuel.regnath@tum.de

version = 0.1.0

description = Check papers for grammar mistakes
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/emareg/paper-checker

license =


[options]
packages = find:
install_requires = 
	black
	requests

include_package_data = True


 
